<resources>
    <string name="app_name">PP Smart Fan</string>
    <string name="save">Salvar</string>
    <string name="fan_bounds">Limites do fan</string>
    <string name="stage_off">Desligado \u2192 Estágio 1</string>
    <string name="minimum">Mínima</string>
    <string name="maximum">Máxima</string>
    <string name="stage_one">Estágio 1 \u2192 Estágio 2</string>
    <string name="stage_two">Estágio 2 \u2192 Estágio 3</string>
    <string name="stage_three">Estágio 3</string>
    <string name="invalid_max_speed_to_stage_two">Valor inválido para velocidade máxima do estágio 2</string>
    <string name="invalid_max_speed_to_stage_one">Valor inválido para velocidade máxima do estágio 1</string>
    <string name="invalid_max_speed_to_stage_off">Valor inválido para velocidade máxima do estágio desligado</string>
    <string name="settings_saved_successfully">Configurações salvas</string>
    <string name="exit">Sair</string>
    <string name="settings">Configurações</string>
    <string name="your_zwift_player_id">Seu ID de usuário no Zwift</string>
    <string name="your_zwift_password">Sua senha no Zwift</string>
    <string name="your_zwift_username">Seu nome de usuário no Zwift</string>
    <string name="zwift_credentials">Credenciais do Zwift</string>
    <string name="help">Ajuda</string>
    <string name="valid_credentials">Credenciais validadas.</string>
    <string name="invalid_credentials">Credenciais inválidas. Verifique e tente novamente.</string>
    <string name="message_to_obtains_zwift_player_id">Para obter o seu ID de usuário do Zwift, clique em OK e siga os passos.</string>
    <string name="fan">Fan</string>
    <string name="speed">Velocidade</string>
    <string name="km_h">km/h</string>
    <string name="stage">estágio</string>
    <string name="zwift_username_wrong_filled">Nome de usuário Zwift preenchido incorretamente.</string>
    <string name="zwift_password_wrong_filled">Senha preenchida incorretamente.</string>
    <string name="zwift_player_id_wrong_filled">ID de usuário Zwift preenchido incorretamente.</string>
    <string name="unknown">Desconhecido</string>
    <string name="refresh">Atualizar</string>
    <string name="bluetooth_adapter_enabled_required">É necessário habilitar o Bluetooth</string>
    <string name="discovery_finished">Busca finalizada</string>
    <string name="bluetooth_permissions_required">Permissões Bluetooth são obrigatórias.</string>
    <string name="choose_smart_fan">Escolha o dispositivo smart fan</string>
</resources>
