<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.MainActivity">

    <TextView
        android:id="@+id/statusFanConnectionTv"
        style="@style/TextViewStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fan"
        android:padding="10dp"
        android:textSize="15sp"
        android:drawableBottom="@drawable/ic_disconnected"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toLeftOf="@id/playerSpeedRl"/>

    <RelativeLayout
        android:id="@+id/playerSpeedRl"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/fanSpeedRl">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:src="@drawable/ic_ride_speed_visor"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:contentDescription="@string/speed"
            android:layout_above="@id/playerSpeedVisorTv" />

        <TextView
            android:id="@+id/playerSpeedVisorTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textSize="80sp" />

        <TextView
            android:id="@+id/speedUnitTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/playerSpeedVisorTv"
            android:layout_centerHorizontal="true"
            android:textSize="20sp"
            android:maxWidth="200dp"
            android:text="@string/km_h"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <com.hookedonplay.decoviewlib.DecoView
            android:id="@+id/playerSpeedVisorAv"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="30dp"
            app:dv_lineWidth="26dp"/>
    </RelativeLayout>


    <RelativeLayout
        android:id="@+id/fanSpeedRl"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintStart_toStartOf="@id/playerSpeedRl"
        app:layout_constraintTop_toBottomOf="@id/playerSpeedRl"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/ic_fan_visor"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:contentDescription="@string/speed"
            android:layout_above="@id/fanSpeedVisorTv" />

        <TextView
            android:id="@+id/fanSpeedVisorTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textSize="80sp" />

        <TextView
            android:id="@+id/fanSpeedUnitTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/fanSpeedVisorTv"
            android:layout_centerHorizontal="true"
            android:textSize="20sp"
            android:maxWidth="200dp"
            android:text="@string/stage"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <com.hookedonplay.decoviewlib.DecoView
            android:id="@+id/fanSpeedVisorAv"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="30dp"
            app:dv_lineWidth="26dp"/>
    </RelativeLayout>



</androidx.constraintlayout.widget.ConstraintLayout>